--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "joao martins",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
@@ -24,6 +26,9 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "rimraf": "^3.0.2"
   }
 }
